--- a/DINOv2 & CLUSTERING/CAPSTONE_PROJECT_clean.ipynb
+++ b/DINOv2 & CLUSTERING/CAPSTONE_PROJECT_clean.ipynb
@@ -45,7 +45,7 @@
         "\n",
         "- Preprocesamiento de imágenes: Las imágenes deben ser redimensionadas a 224x224 píxeles y normalizadas con los valores de media y desviación estándar esperados por DINOv2.\n",
         "\n",
-        "- Extracción de características con DINOv2: Utilizaremos el modelo preentrenado ViT-g/14 para generar embeddings. Los pasos incluyen cargar las imágenes, preprocesarlas, y pasar cada una por el modelo para obtener vectores de características.\n",
+        "- Extracción de características con DINOv2: Utilizaremos el modelo preentrenado ViT-b/14 para generar embeddings. Los pasos incluyen cargar las imágenes, preprocesarlas, y pasar cada una por el modelo para obtener vectores de características.\n",
         "\n",
         "\n",
         "## DINOv2 Installation"
